--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.0",
